# cad-industrial-design-compiler

./: .gitignore  LICENSE  README.en.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: test.yml
docs/: architecture.md  data-contract.md  maintainer-workflow.md  privacy-and-sanitization.md
examples/: synthetic_component_catalog.csv  synthetic_selected_components.csv
examples/synthetic_project/graph/: execution_graph.json
examples/synthetic_project/ir/: cad_ir.json
examples/synthetic_project/planning/: placement_plan.csv
scripts/: generate_readme_assets.py  privacy_scan.py
src/cad_agent_skill/: __init__.py  cli.py  core.py
src/cad_industrial_compiler/: __init__.py  cli.py
tests/: test_core.py
