[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cad-agent-skill"
version = "0.1.0"
description = "Privacy-first workflow skill for CAD agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "CAD Agent Skill contributors" }
]
keywords = ["cad", "agent", "skill", "industrial-design", "workflow", "automation", "validation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]

[project.scripts]
cad-agent-skill = "cad_agent_skill.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
